// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timeline Card media > should match the snapshot ( IMAGE ) 1`] = `
<div>
  <div
    class="sc-Qotzb gPGhhl card-media-wrapper card-media"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-icnseD gOZSNH"
      height="200"
    >
      <img
        alt="Image"
        class="sc-fYsHOw qMwu"
        data-testid="timeline-card-content-image"
        height="auto"
        loading="lazy"
        mode="VERTICAL_ALTERNATING"
        src="https://picsum.photos/200/300"
        width="100%"
      />
    </div>
  </div>
  <div
    class="sc-fWnslK idIbcW"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-kpOvIu NBiZG"
    >
      <h1
        class="sc-cUiCeM VlWd active card-title"
        data-class="card-title"
      >
        Image title
      </h1>
    </div>
    <h2
      class="sc-jJAtPt fwmWwm card-sub-title card-subtitle"
    >
      This is another test
    </h2>
  </div>
</div>
`;

exports[`Timeline Card media > should match the snapshot ( VIDEO ) 1`] = `
<div>
  <div
    class="sc-Qotzb gPGhhl card-media-wrapper card-media"
    mode="VERTICAL_ALTERNATING"
  >
    <iframe
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
      allowfullscreen=""
      class="sc-iQQCXo hYjopf"
      data-testid="timeline-card-content-video"
      loading="lazy"
      src="https://www.youtube.com/embed/9bZkp7q19f0?autoplay=1&enablejsapi=1"
      title="Video"
    />
  </div>
  <div
    class="sc-fWnslK idIbcW"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-kpOvIu NBiZG"
    >
      <h1
        class="sc-cUiCeM VlWd active card-title"
        data-class="card-title"
      >
        Image title
      </h1>
    </div>
    <h2
      class="sc-jJAtPt fwmWwm card-sub-title card-subtitle"
    >
      This is another test
    </h2>
  </div>
</div>
`;
